tests/compilation_tests/06_fail_name_reuse.stderr
error[E0428]: the name `MyTensor` is defined multiple times
  --> tests/compilation_tests/06_fail_name_reuse.rs:8:5
   |
8  |     tensor_type!(MyTensor, [my_param1], Params, tch::Kind::Float);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MyTensor` redefined here
9  |     // This line won't compile because the type MyTensor is already defined.
10 |     tensor_type!(MyTensor, [my_param1], Params, tch::Kind::Float);
   |     ------------------------------------------------------------- previous definition of the type `MyTensor` here
   |
   = note: `MyTensor` must be defined only once in the type namespace of this block
   = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `TensorType` for type `main::MyTensor`
  --> tests/compilation_tests/06_fail_name_reuse.rs:10:5
   |
8  |     tensor_type!(MyTensor, [my_param1], Params, tch::Kind::Float);
   |     ------------------------------------------------------------- first implementation here
9  |     // This line won't compile because the type MyTensor is already defined.
10 |     tensor_type!(MyTensor, [my_param1], Params, tch::Kind::Float);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `main::MyTensor`
   |
   = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Debug` for type `main::MyTensor`
  --> tests/compilation_tests/06_fail_name_reuse.rs:10:5
   |
8  |     tensor_type!(MyTensor, [my_param1], Params, tch::Kind::Float);
   |     ------------------------------------------------------------- first implementation here
9  |     // This line won't compile because the type MyTensor is already defined.
10 |     tensor_type!(MyTensor, [my_param1], Params, tch::Kind::Float);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `main::MyTensor`
   |
   = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Deref` for type `main::MyTensor`
  --> tests/compilation_tests/06_fail_name_reuse.rs:10:5
   |
8  |     tensor_type!(MyTensor, [my_param1], Params, tch::Kind::Float);
   |     ------------------------------------------------------------- first implementation here
9  |     // This line won't compile because the type MyTensor is already defined.
10 |     tensor_type!(MyTensor, [my_param1], Params, tch::Kind::Float);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `main::MyTensor`
   |
   = note: this error originates in the macro `tensor_type` (in Nightly builds, run with -Z macro-backtrace for more info)
